fix(pagination.less): Pagination footer no longer overlaps last row.
Removed most float: left CSS and replace them with display: inline-block;

fix #4209, fix #2848

--- a/src/features/pagination/less/pagination.less
+++ b/src/features/pagination/less/pagination.less
@@ -13,14 +13,14 @@
 }
 
 .ui-grid-pager-container {
-  float: left;
+  display: inline-block;
 }
 
 .ui-grid-pager-control {
   margin-right: 10px;
   margin-left: 10px;
   min-width: 135px;
-  float: left;
+  display: inline-block;
 
   button {
     height: 25px;
@@ -106,19 +106,18 @@
     height: 12px;
     margin-right: -11px;
   }
-
-
 }
 
 .ui-grid-pager-row-count-picker {
-  float: left;
+  display: inline-block;
 
   select {
     #ui-grid-twbs > .form-control;
     #ui-grid-twbs > .input-sm ();
-    height: 26px;
+    height: 25px;
     width: 67px;
     display: inline;
+    vertical-align: middle;
   }
 
   .ui-grid-pager-row-count-label {
